--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.6.0",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.1",
+    "d3": "^4.0.0-alpha.40",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-loader": "^0.4.3",
     "import-glob-loader": "^1.1.0",
