--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.1",
     "d3": "^4.0.0-alpha.40",
+    "ejs-compiled-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-loader": "^0.4.3",
     "import-glob-loader": "^1.1.0",
